[package]
name = "random-wheel"
version = "0.1.1"
authors = ["Kerosene2000 <renault.cle@gmail.com>"]
description = "A little implementation of random wheels (used in genetic algorithm for selection)"
license = "AML"
repository = "https://github.com/Kerosene2000/random-wheel-rs"

[dependencies]
rand = "0.3"
