[package]
name = "random-wheel"
version = "0.2.5"
authors = ["Kerosene2000 <renault.cle@gmail.com>"]
documentation = "https://kerosene2000.github.io/random-wheel-rs-doc/random-wheel-rs/random_wheel/index.html"
description = "A little implementation of random wheels (used in genetic algorithm for selection)"
license = "AML"
repository = "https://github.com/Kerosene2000/random-wheel-rs"

[dependencies]
rand = "0.3"
